Add comprehensive .gitignore for Python, Node.js, and IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# --- Dependencies ---
-# Node.js
-node_modules/
-.pnp
-.pnp.js
+# AI Cost Tracker - .gitignore
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+*.env
 
 # Python
 __pycache__/
@@ -22,70 +24,134 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-.venv
+PIPFILE.lock
+
+# Virtual environments
 venv/
 ENV/
 env/
-poetry.lock
-Pipfile.lock
+env.bak/
+venv.bak/
+.venv/
 
-# --- Testing & Coverage ---
-coverage/
-.nyc_output/
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-test-results/
+# Flask
+instance/
+.webassets-cache
 
-# --- Build & Dist ---
-dist/
-build/
-out/
-
-# --- Environment & Config ---
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env*.local
-
-# --- IDEs & Editors ---
-.vscode/
-!.vscode/extensions.json
-!.vscode/launch.json
-!.vscode/settings.json
-!.vscode/tasks.json
+# PyCharm
 .idea/
-*.swp
-*.swo
-.DS_Store
-Thumbs.db
+*.iml
+*.iws
+*.ipr
 
-# --- Logs ---
-logs
-*.log
+# VS Code
+.vscode/
+*.code-workspace
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+.hypothesis/
+
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+package-lock.json
+yarn.lock
 
-# --- AI & LLM Temporary Files ---
-.gemini/
-.copilot/
+# Next.js / React
+.next/
+out/
+build/
+.cache/
 
+# Production builds
+dist/
+build/
+*.production
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+ai_tracker.db
+
+# PostgreSQL
+*.sql
+*.dump
+
+# Redis dump
+dump.rdb
+
+# Docker
+.docker/
+docker-compose.override.yml
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDEs and editors
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Secrets and credentials
+*.pem
+*.key
+*.crt
+secrets/
+credentials/
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+*.pid
+*.seed
+*.pid.lock
+
+# Migration temp files
+migrations/versions/*.pyc
+
+# Local development
+local_settings.py
+.local
